@@ -1,6 +1,8 @@
 2009-09-09  Doug Evans  <dje@sebabeach.org>
 
-	* rtl.texi: Add text to docs on ifield-assertions.
+	* rtl-traverse.scm: Comment tweaks.
+	* rtl-xform.scm: Comment and reformatting tweaks.
+	* doc/rtl.texi: Add text to docs on ifield-assertions.
 
 	* insn.scm (/insn-parse): Canonicalize the ifield-assertion before
 	saving.
